--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "cors": "^2.8.5",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "nodemon": "^3.1.7"
